--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-slick": "^0.30.2",
     "react-slider": "^2.0.6",
     "slick-carousel": "^1.8.1",
