--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dynamic-labs/ethereum": "^2.2.3",
+    "@dynamic-labs/sdk-react-core": "^2.2.3",
+    "@dynamic-labs/starknet": "^2.2.3",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
@@ -16,6 +19,7 @@
     "react-slick": "^0.30.2",
     "react-slider": "^2.0.6",
     "slick-carousel": "^1.8.1",
+    "viem": "^2.15.1",
     "web3": "^4.9.0"
   },
   "devDependencies": {
