--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,9 @@ jobs:
         go-version: '1.20'
 
     - name: Build
+      working-directory: ./backend
       run: go build -v ./...
 
     - name: Test
+      working-directory: ./backend
       run: go test -v ./...
