--- a/.env
+++ b/.env
@@ -16,3 +16,4 @@ j46ztFwcxQL3rEx3O9SSXa8CAwEAAQ==
 DYNAMIC_JWKS_ENDPOINT=https://app.dynamic.xyz/api/v0/sdk/fe350575-4c7c-4297-aff2-9a3de9e5c479/.well-known/jwks
 
 BASE_URL=http://13.233.53.75:8868 
+NEXT_URL=http://localhost:3000/api
