--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@dynamic-labs/ethereum": "^2.2.3",
+    "@dynamic-labs/ethereum": "^2.2.4",
     "@dynamic-labs/sdk-react-core": "^2.2.3",
     "@dynamic-labs/starknet": "^2.2.3",
+    "@dynamic-labs/wagmi-connector": "^2.2.4",
+    "@reduxjs/toolkit": "^2.2.5",
+    "@tanstack/react-query": "^5.45.1",
+    "axios": "^1.7.2",
     "next": "14.2.4",
+    "next-redux-wrapper": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
     "react-slider": "^2.0.6",
     "slick-carousel": "^1.8.1",
     "viem": "^2.15.1",
+    "wagmi": "^2.10.4",
     "web3": "^4.9.0"
   },
   "devDependencies": {
