--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "^5.45.1",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "next": "14.2.4",
     "next-redux-wrapper": "^8.1.0",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-error-boundary": "^4.0.13",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
@@ -30,8 +33,10 @@
     "web3": "^4.9.0"
   },
   "devDependencies": {
+    "@types/chart.js": "^2.9.41",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
     "@types/react-slider": "^1.3.6",
